--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <title>AlphaWave</title>
 </head>
 
-<body>
+<body style="height:100vh">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom pe-5 ps-5">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
             <span class="w-50 text-white fs-2">AlphaWave</span>
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 active link-light">Accueil</a></li>
-            <li><a href="#" class="nav-link px-2 link-light">Produits</a></li>
+            <li><a href="/" class="nav-link px-2 active link-light">Accueil</a></li>
+            <li><a href="/views/produit.html" class="nav-link px-2 link-light">Produits</a></li>
             <li><a href="#" class="nav-link px-2 link-light">Contactez Nous</a></li>
             <li><a href="#" class="nav-link px-2 link-light">A propos</a></li>
         </ul>
